refactor: Use list comprehensions for Reporting proto BUILD
This avoids duplication of boilerplate code.

--- a/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
@@ -4,6 +4,7 @@ load(
     "kt_jvm_grpc_proto_library",
     "kt_jvm_proto_library",
 )
+load("//build:defs.bzl", "proto_lib_prefix")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -12,6 +13,29 @@ exports_files(["permissions_config.textproto"])
 IMPORT_PREFIX = "/src/main/proto"
 
 # Resources and shared message types.
+
+MESSAGE_LIBS = [
+    ":basic_report_proto",
+    ":event_filter_proto",
+    ":event_group_proto",
+    ":event_template_field_proto",
+    ":impression_qualification_filter_proto",
+    ":impression_qualification_filter_spec_proto",
+    ":media_type_proto",
+    ":metric_calculation_spec_proto",
+    ":metric_frequency_spec_proto",
+    ":metric_proto",
+    ":page_proto",
+    ":page_token_proto",
+    ":report_proto",
+    ":report_schedule_iteration_proto",
+    ":report_schedule_proto",
+    ":reporting_impression_qualification_filter_proto",
+    ":reporting_interval_proto",
+    ":reporting_set_proto",
+    ":reporting_unit_proto",
+    ":time_interval_proto",
+]
 
 proto_library(
     name = "basic_report_proto",
@@ -27,11 +51,6 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "basic_report_kt_jvm_proto",
-    deps = [":basic_report_proto"],
-)
-
 proto_library(
     name = "event_filter_proto",
     srcs = ["event_filter.proto"],
@@ -40,11 +59,6 @@ proto_library(
         ":event_template_field_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
     ],
-)
-
-kt_jvm_proto_library(
-    name = "event_filter_kt_jvm_proto",
-    deps = [":event_filter_proto"],
 )
 
 proto_library(
@@ -58,11 +72,6 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "event_group_kt_jvm_proto",
-    deps = [":event_group_proto"],
-)
-
 proto_library(
     name = "event_template_field_proto",
     srcs = ["event_template_field.proto"],
@@ -70,11 +79,6 @@ proto_library(
     deps = [
         "@com_google_googleapis//google/api:field_behavior_proto",
     ],
-)
-
-kt_jvm_proto_library(
-    name = "event_template_field_kt_jvm_proto",
-    deps = [":event_template_field_proto"],
 )
 
 proto_library(
@@ -88,11 +92,6 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "impression_qualification_filter_kt_jvm_proto",
-    deps = [":impression_qualification_filter_proto"],
-)
-
 proto_library(
     name = "impression_qualification_filter_spec_proto",
     srcs = ["impression_qualification_filter_spec.proto"],
@@ -104,22 +103,10 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "impression_qualification_filter_spec_kt_jvm_proto",
-    deps = [":impression_qualification_filter_spec_proto"],
-)
-
 proto_library(
     name = "media_type_proto",
     srcs = ["media_type.proto"],
     strip_import_prefix = IMPORT_PREFIX,
-    deps = [
-    ],
-)
-
-kt_jvm_proto_library(
-    name = "media_type_kt_jvm_proto",
-    deps = [":media_type_proto"],
 )
 
 proto_library(
@@ -135,11 +122,6 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "metric_kt_jvm_proto",
-    deps = [":metric_proto"],
-)
-
 proto_library(
     name = "metric_calculation_spec_proto",
     srcs = ["metric_calculation_spec.proto"],
@@ -152,11 +134,6 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "metric_calculation_spec_kt_jvm_proto",
-    deps = [":metric_calculation_spec_proto"],
-)
-
 proto_library(
     name = "metric_frequency_spec_proto",
     srcs = ["metric_frequency_spec.proto"],
@@ -165,11 +142,6 @@ proto_library(
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/type:dayofweek_proto",
     ],
-)
-
-kt_jvm_proto_library(
-    name = "metric_frequency_spec_kt_jvm_proto",
-    deps = [":metric_frequency_spec_proto"],
 )
 
 proto_library(
@@ -188,11 +160,6 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "report_kt_jvm_proto",
-    deps = [":report_proto"],
-)
-
 proto_library(
     name = "report_schedule_proto",
     srcs = ["report_schedule.proto"],
@@ -208,11 +175,6 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "report_schedule_kt_jvm_proto",
-    deps = [":report_schedule_proto"],
-)
-
 proto_library(
     name = "report_schedule_iteration_proto",
     srcs = ["report_schedule_iteration.proto"],
@@ -222,11 +184,6 @@ proto_library(
         "@com_google_googleapis//google/api:resource_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
-)
-
-kt_jvm_proto_library(
-    name = "report_schedule_iteration_kt_jvm_proto",
-    deps = [":report_schedule_iteration_proto"],
 )
 
 proto_library(
@@ -240,11 +197,6 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "reporting_impression_qualification_filter_kt_jvm_proto",
-    deps = [":reporting_impression_qualification_filter_proto"],
-)
-
 proto_library(
     name = "reporting_interval_proto",
     srcs = ["reporting_interval.proto"],
@@ -254,11 +206,6 @@ proto_library(
         "@com_google_googleapis//google/type:date_proto",
         "@com_google_googleapis//google/type:datetime_proto",
     ],
-)
-
-kt_jvm_proto_library(
-    name = "reporting_interval_kt_jvm_proto",
-    deps = [":reporting_interval_proto"],
 )
 
 proto_library(
@@ -271,11 +218,6 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "reporting_unit_kt_jvm_proto",
-    deps = [":reporting_unit_proto"],
-)
-
 proto_library(
     name = "reporting_set_proto",
     srcs = ["reporting_set.proto"],
@@ -284,11 +226,6 @@ proto_library(
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
     ],
-)
-
-kt_jvm_proto_library(
-    name = "reporting_set_kt_jvm_proto",
-    deps = [":reporting_set_proto"],
 )
 
 proto_library(
@@ -319,11 +256,6 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "page_kt_jvm_proto",
-    deps = [":page_proto"],
-)
-
 proto_library(
     name = "page_token_proto",
     srcs = ["page_token.proto"],
@@ -332,12 +264,20 @@ proto_library(
     ],
 )
 
-kt_jvm_proto_library(
-    name = "page_token_kt_jvm_proto",
-    deps = [":page_token_proto"],
-)
-
 # Services.
+
+SERVICE_LIBS = [
+    ":basic_reports_service_proto",
+    ":event_groups_service_proto",
+    ":impression_qualification_filters_service_proto",
+    ":metric_calculation_specs_service_proto",
+    ":metrics_service_proto",
+    ":report_schedule_iterations_service_proto",
+    ":report_schedules_service_proto",
+    ":reporting_sets_service_proto",
+    ":reports_service_proto",
+]
+
 proto_library(
     name = "basic_reports_service_proto",
     srcs = ["basic_reports_service.proto"],
@@ -352,11 +292,6 @@ proto_library(
     ],
 )
 
-kt_jvm_grpc_proto_library(
-    name = "basic_reports_service_kt_jvm_grpc_proto",
-    deps = [":basic_reports_service_proto"],
-)
-
 proto_library(
     name = "event_groups_service_proto",
     srcs = ["event_groups_service.proto"],
@@ -368,11 +303,6 @@ proto_library(
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
     ],
-)
-
-kt_jvm_grpc_proto_library(
-    name = "event_groups_service_kt_jvm_grpc_proto",
-    deps = [":event_groups_service_proto"],
 )
 
 proto_library(
@@ -391,11 +321,6 @@ proto_library(
     ],
 )
 
-kt_jvm_grpc_proto_library(
-    name = "impression_qualification_filters_service_kt_jvm_grpc_proto",
-    deps = [":impression_qualification_filters_service_proto"],
-)
-
 proto_library(
     name = "metrics_service_proto",
     srcs = ["metrics_service.proto"],
@@ -407,11 +332,6 @@ proto_library(
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
     ],
-)
-
-kt_jvm_grpc_proto_library(
-    name = "metrics_service_kt_jvm_grpc_proto",
-    deps = [":metrics_service_proto"],
 )
 
 proto_library(
@@ -427,11 +347,6 @@ proto_library(
     ],
 )
 
-kt_jvm_grpc_proto_library(
-    name = "metric_calculation_specs_service_kt_jvm_grpc_proto",
-    deps = [":metric_calculation_specs_service_proto"],
-)
-
 proto_library(
     name = "reports_service_proto",
     srcs = ["reports_service.proto"],
@@ -443,11 +358,6 @@ proto_library(
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
     ],
-)
-
-kt_jvm_grpc_proto_library(
-    name = "reports_service_kt_jvm_grpc_proto",
-    deps = [":reports_service_proto"],
 )
 
 proto_library(
@@ -463,11 +373,6 @@ proto_library(
     ],
 )
 
-kt_jvm_grpc_proto_library(
-    name = "report_schedules_service_kt_jvm_grpc_proto",
-    deps = [":report_schedules_service_proto"],
-)
-
 proto_library(
     name = "report_schedule_iterations_service_proto",
     srcs = ["report_schedule_iterations_service.proto"],
@@ -479,11 +384,6 @@ proto_library(
         "@com_google_googleapis//google/api:field_behavior_proto",
         "@com_google_googleapis//google/api:resource_proto",
     ],
-)
-
-kt_jvm_grpc_proto_library(
-    name = "report_schedule_iterations_service_kt_jvm_grpc_proto",
-    deps = [":report_schedule_iterations_service_proto"],
 )
 
 proto_library(
@@ -499,7 +399,20 @@ proto_library(
     ],
 )
 
-kt_jvm_grpc_proto_library(
-    name = "reporting_sets_service_kt_jvm_grpc_proto",
-    deps = [":reporting_sets_service_proto"],
-)
+# Language-specific libraries.
+
+[
+    kt_jvm_proto_library(
+        name = "{prefix}_kt_jvm_proto".format(prefix = proto_lib_prefix(label_str)),
+        deps = [label_str],
+    )
+    for label_str in MESSAGE_LIBS
+]
+
+[
+    kt_jvm_grpc_proto_library(
+        name = "{prefix}_kt_jvm_grpc_proto".format(prefix = proto_lib_prefix(label_str)),
+        deps = [label_str],
+    )
+    for label_str in SERVICE_LIBS
+]
