--- a/src/main/proto/wfa/measurement/securecomputation/requisitions/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/securecomputation/requisitions/v1alpha/BUILD.bazel
@@ -20,3 +20,20 @@ kt_jvm_proto_library(
     name = "kingdom_config_kt_jvm_proto",
     deps = [":kingdom_config_proto"],
 )
+
+proto_library(
+    name = "storage_config_proto",
+    srcs = ["storage_config.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_protobuf//:any_proto",
+        "@com_google_protobuf//:timestamp_proto",
+    ],
+)
+
+kt_jvm_proto_library(
+    name = "storage_config_kt_jvm_proto",
+    deps = [":storage_config_proto"],
+)
