feat: Add Create method to BasicReport (#1994)
Changes to the MC API required for Phase II.

--- a/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/reporting/v2alpha/BUILD.bazel
@@ -107,6 +107,8 @@ proto_library(
     name = "media_type_proto",
     srcs = ["media_type.proto"],
     strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+    ],
 )
 
 proto_library(
@@ -287,7 +289,9 @@ proto_library(
         "@com_google_googleapis//google/api:annotations_proto",
         "@com_google_googleapis//google/api:client_proto",
         "@com_google_googleapis//google/api:field_behavior_proto",
+        "@com_google_googleapis//google/api:field_info_proto",
         "@com_google_googleapis//google/api:resource_proto",
+        "@com_google_googleapis//google/longrunning:operations_proto",
         "@com_google_protobuf//:timestamp_proto",
     ],
 )
