fix: Update bazelrc so Build Buddy avoids missing digest file errors (#2040)

--- a/.bazelrc
+++ b/.bazelrc
@@ -25,6 +25,11 @@ build --remote_timeout=3600
 build:remote-cache --remote_cache=grpcs://halo-cmm.buildbuddy.io
 build:remote-cache --experimental_remote_cache_compression
 build:remote-cache --experimental_remote_cache_compression_threshold=100
+# These next three flags are due to a workaround for missing digests described here
+# https://www.buildbuddy.io/docs/troubleshooting-rbe/#cachenotfoundexception-missing-digest
+build:remote-cache --experimental_remote_cache_eviction_retries=5
+build:remote-cache --experimental_remote_cache_lease_extension=true
+build:remote-cache --experimental_remote_cache_ttl=3h
 
 # Configuration for continuous integration (CI).
 common:ci --lockfile_mode=error
