--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/requisitions/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/requisitions/BUILD.bazel
@@ -6,17 +6,16 @@ kt_jvm_library(
     name = "requisition_fetcher",
     srcs = ["RequisitionFetcher.kt"],
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/api:api_key_constants",
-        "//src/main/kotlin/org/wfanet/measurement/common/api/grpc:list_resources",
         "//src/main/proto/wfa/measurement/api/v2alpha:requisitions_service_kt_jvm_grpc_proto",
-        "//src/main/proto/wfa/measurement/securecomputation/requisitions/v1alpha:kingdom_config_kt_jvm_proto",
-        "//src/main/proto/wfa/measurement/securecomputation/requisitions/v1alpha:storage_config_kt_jvm_proto",
-        "@wfa_common_jvm//imports/java/com/google/cloud/functions:functions_framework_api",
-        "@wfa_common_jvm//imports/java/com/google/cloud/storage",
-        "@wfa_common_jvm//imports/java/com/google/events",
-        "@wfa_common_jvm//imports/java/com/google/protobuf",
-        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/gcs",
+    ],
+)
+
+kt_jvm_library(
+    name = "requisition_fetcher_runner",
+    srcs = ["RequisitionFetcherRunner.kt"],
+    deps = [
+        ":requisition_fetcher",
     ],
 )
