--- a/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
@@ -220,7 +220,7 @@ MESSAGE_LIBS = [
     "event_template_field",
     "impression_qualification_filter_spec",
     "metric_frequency_spec",
-    "page",
+    "result_group",
     "reporting_impression_qualification_filter",
     "reporting_interval",
     "windowing_spec",
@@ -240,7 +240,7 @@ proto_library(
     name = "basic_report_result_details_proto",
     srcs = ["basic_report_result_details.proto"],
     strip_import_prefix = IMPORT_PREFIX,
-    deps = [":page_proto"],
+    deps = [":result_group_proto"],
 )
 
 proto_library(
@@ -282,19 +282,6 @@ proto_library(
 )
 
 proto_library(
-    name = "page_proto",
-    srcs = ["page.proto"],
-    strip_import_prefix = IMPORT_PREFIX,
-    deps = [
-        ":event_filter_proto",
-        ":event_template_field_proto",
-        ":reporting_impression_qualification_filter_proto",
-        ":windowing_spec_proto",
-        "@com_google_googleapis//google/type:interval_proto",
-    ],
-)
-
-proto_library(
     name = "reporting_impression_qualification_filter_proto",
     srcs = ["reporting_impression_qualification_filter.proto"],
     strip_import_prefix = IMPORT_PREFIX,
@@ -308,6 +295,19 @@ proto_library(
     deps = [
         "@com_google_googleapis//google/type:date_proto",
         "@com_google_googleapis//google/type:datetime_proto",
+    ],
+)
+
+proto_library(
+    name = "result_group_proto",
+    srcs = ["result_group.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        ":event_filter_proto",
+        ":event_template_field_proto",
+        ":reporting_impression_qualification_filter_proto",
+        ":windowing_spec_proto",
+        "@com_google_googleapis//google/type:interval_proto",
     ],
 )
 
@@ -357,7 +357,7 @@ proto_descriptor_set(
         ":event_template_field_proto",
         ":impression_qualification_filter_spec_proto",
         ":metric_frequency_spec_proto",
-        ":page_proto",
+        ":result_group_proto",
         ":reporting_impression_qualification_filter_proto",
         ":reporting_interval_proto",
         ":windowing_spec_proto",
