--- a/src/main/resources/kingdom/spanner/changelog.yaml
+++ b/src/main/resources/kingdom/spanner/changelog.yaml
@@ -75,3 +75,6 @@ databaseChangeLog:
 - include:
     file: shard-measurements-by-continuation-token.sql
     relativeToChangeLogFile: true
+- include:
+    file: null-filter-measurements-by-continuation-token.sql
+    relativeToChangeLogFile: true
