--- a/src/test/kotlin/org/wfanet/measurement/securecomputation/requisitions/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/securecomputation/requisitions/BUILD.bazel
@@ -8,8 +8,33 @@ package(
 kt_jvm_test(
     name = "requisition_fetcher_test",
     srcs = ["RequisitionFetcherTest.kt"],
+    data = [
+        "//src/main/k8s/testing/secretfiles:all_configs",
+        "//src/main/k8s/testing/secretfiles:all_der_files",
+        "//src/main/k8s/testing/secretfiles:all_tink_keysets",
+        "//src/main/k8s/testing/secretfiles:edp_trusted_certs.pem",
+    ],
     test_class = "org.wfanet.measurement.securecomputation.requisitions.RequisitionFetcherTest",
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/api/v2alpha/testing",
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/requisitions:requisition_fetcher",
+        "//src/main/proto/wfa/measurement/api/v2alpha:requisitions_service_kt_jvm_grpc_proto",
+        "//src/main/proto/wfa/measurement/api/v2alpha/event_templates/testing:test_event_kt_jvm_proto",
+        "@wfa_common_jvm//imports/java/com/google/cloud/storage/contrib/nio",
+        "@wfa_common_jvm//imports/java/com/google/common/truth",
+        "@wfa_common_jvm//imports/java/com/google/common/truth/extensions/proto",
         "@wfa_common_jvm//imports/java/org/junit",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/testing",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto/tink",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc/testing",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/testing",
+        "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/duchy",
+        "@wfa_consent_signaling_client//src/main/kotlin/org/wfanet/measurement/consent/client/measurementconsumer",
     ],
+)
+
+java_test(
+    name = "RequisitionFetcherTest",
+    test_class = "org.wfanet.measurement.securecomputation.requisitions.RequisitionFetcherTest",
+    runtime_deps = [":requisition_fetcher_test"],
 )
