--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/requisitions/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/requisitions/BUILD.bazel
@@ -7,9 +7,16 @@ kt_jvm_library(
     srcs = ["RequisitionFetcher.kt"],
     deps = [
         "//src/main/proto/wfa/measurement/api/v2alpha:requisitions_service_kt_jvm_grpc_proto",
+        "@wfa_common_jvm//imports/java/com/google/cloud/functions:functions_framework_api",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/gcs",
     ],
+)
+
+java_binary(
+    name = "RequisitionFetcher",
+    main_class = "org.wfanet.measurement.securecomputation.requisitions.RequisitionFetcher",
+    runtime_deps = [":requisition_fetcher"],
 )
 
 kt_jvm_library(
@@ -18,4 +25,10 @@ kt_jvm_library(
     deps = [
         ":requisition_fetcher",
     ],
+)
+
+java_binary(
+    name = "RequisitionFetcherRunner",
+    main_class = "org.wfanet.measurement.securecomputation.requisitions.RequisitionFetcherRunner",
+    runtime_deps = [":requisition_fetcher_runner"],
 )
