--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/requisitions/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/requisitions/BUILD.bazel
@@ -1,3 +1,4 @@
+load("@rules_java//java:defs.bzl", "java_binary")
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 package(default_visibility = ["//visibility:public"])
