--- a/src/test/kotlin/org/wfanet/measurement/securecomputation/requisitions/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/securecomputation/requisitions/BUILD.bazel
@@ -1,4 +1,5 @@
-load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library", "kt_jvm_test")
+load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
+load("@rules_java//java:defs.bzl", "java_test")
 
 package(
     default_testonly = True,
