--- a/src/main/k8s/local/BUILD.bazel
+++ b/src/main/k8s/local/BUILD.bazel
@@ -189,6 +189,33 @@ cue_dump(
 )
 
 cue_library(
+    name = "population_requisition_fulfiller_cue",
+    srcs = ["population_requisition_fulfiller.cue"],
+    deps = [
+        ":config_cue",
+        "//src/main/k8s:population_requisition_fulfiller",
+    ],
+)
+
+cue_dump(
+    name = "population_requisition_fulfiller",
+    cue_tags = {
+        "secret_name": SECRET_NAME,
+        "container_registry": IMAGE_REPOSITORY_SETTINGS.container_registry,
+        "image_repo_prefix": IMAGE_REPOSITORY_SETTINGS.repository_prefix,
+        "image_tag": IMAGE_REPOSITORY_SETTINGS.image_tag,
+        "mc_name": TEST_K8S_SETTINGS.mc_name,
+        "pdp_name": TEST_K8S_SETTINGS.pdp_name,
+        "pdp_cert_name": TEST_K8S_SETTINGS.pdp_cert_name,
+        "population_resource_name": TEST_K8S_SETTINGS.population_resource_name,
+    },
+    tags = ["manual"],
+    deps = [
+        ":population_requisition_fulfiller_cue",
+    ],
+)
+
+cue_library(
     name = "measurement_system_prober_cue",
     srcs = ["measurement_system_prober.cue"],
     deps = [
@@ -386,6 +413,7 @@ kustomization_dir(
         ":emulators",
         ":kingdom",
         ":measurement_system_prober",
+        ":population_requisition_fulfiller",
         ":postgres_database",
     ],
     generate_kustomization = True,
