fix: fix Access CLI main_class in BUILD

--- a/src/main/kotlin/org/wfanet/measurement/access/deploy/tools/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/access/deploy/tools/BUILD.bazel
@@ -21,6 +21,6 @@ kt_jvm_library(
 
 java_binary(
     name = "Access",
-    main_class = "org.wfanet.measurement.access.deploy.tools.access",
+    main_class = "org.wfanet.measurement.access.deploy.tools.Access",
     runtime_deps = [":access"],
 )
