--- a/src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha/BUILD.bazel
@@ -43,6 +43,20 @@ kt_jvm_proto_library(
     deps = [":work_item_proto"],
 )
 
+proto_library(
+    name = "encrypted_dek_proto",
+    srcs = ["encrypted_dek.proto"],
+    strip_import_prefix = IMPORT_PREFIX,
+    deps = [
+        "@com_google_protobuf//:any_proto",
+    ],
+)
+
+kt_jvm_proto_library(
+    name = "encrypted_dek_kt_jvm_proto",
+    deps = [":encrypted_dek_proto"],
+)
+
 #Services.
 
 proto_library(
