--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -503,7 +503,7 @@ cue_library(
     name = "measurement_system_prober_cue",
     srcs = ["measurement_system_prober_gke.cue"],
     deps = [
-        ":config",
+        ":base_gke",
         "//src/main/k8s:measurement_system_prober",
     ],
 )
