fix: add config dep back to prober dev cue library, and add temporary debug print for prober

--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -504,6 +504,7 @@ cue_library(
     srcs = ["measurement_system_prober_gke.cue"],
     deps = [
         ":base_gke",
+        ":config_gke",
         "//src/main/k8s:measurement_system_prober",
     ],
 )
