fix: add config_gke to prober dev cue dump, and remove base_gke from prober dev cue library

--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -503,7 +503,6 @@ cue_library(
     name = "measurement_system_prober_cue",
     srcs = ["measurement_system_prober_gke.cue"],
     deps = [
-        ":base_gke",
         ":config_gke",
         "//src/main/k8s:measurement_system_prober",
     ],
@@ -524,6 +523,7 @@ cue_dump(
     },
     tags = ["manual"],
     deps = [
+        ":config_gke",
         ":measurement_system_prober_cue",
         "//src/main/k8s:measurement_system_prober",
     ],
