--- a/src/main/kotlin/org/wfanet/measurement/eventdataprovider/privacybudgetmanagement/testing/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/eventdataprovider/privacybudgetmanagement/testing/BUILD.bazel
@@ -7,6 +7,7 @@ package(
         "//src/main/kotlin/org/wfanet/measurement/loadtest:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/eventdataprovider:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/loadtest:__subpackages__",
+        "//src/test/kotlin/org/wfanet/measurement/securecomputation/teeapps/resultsfulfillment:__subpackages__",
     ],
 )
 
