feat: Use separate TLS certificate for Access API server
The Access API server is likely to have a different hostname than the Reporting API server.

--- a/src/main/k8s/testing/secretfiles/BUILD.bazel
+++ b/src/main/k8s/testing/secretfiles/BUILD.bazel
@@ -218,6 +218,8 @@ SECRET_FILES = [
     "reporting_root.pem",
     "reporting_tls.key",
     "reporting_tls.pem",
+    "access_tls.pem",
+    "access_tls.key",
     "pdp1_cs_cert.der",
     "pdp1_cs_private.der",
     "pdp1_enc_private.tink",
