--- a/src/main/k8s/testing/secretfiles/reporting_secrets_kustomization.yaml
+++ b/src/main/k8s/testing/secretfiles/reporting_secrets_kustomization.yaml
@@ -19,6 +19,8 @@ secretGenerator:
   - reporting_tls.key
   - reporting_tls.pem
   - reporting_root.pem
+  - access_tls.pem
+  - access_tls.key
   - mc_enc_public.tink
   - mc_enc_private.tink
   - mc_cs_private.der
