--- a/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
+++ b/src/main/proto/wfa/measurement/internal/reporting/v2/BUILD.bazel
@@ -223,7 +223,6 @@ MESSAGE_LIBS = [
     "result_group",
     "reporting_impression_qualification_filter",
     "reporting_interval",
-    "windowing_spec",
 ]
 
 proto_library(
@@ -240,7 +239,7 @@ proto_library(
     name = "basic_report_result_details_proto",
     srcs = ["basic_report_result_details.proto"],
     strip_import_prefix = IMPORT_PREFIX,
-    deps = ["@com_google_protobuf//:any_proto"],
+    deps = [":result_group_proto"],
 )
 
 proto_library(
@@ -305,17 +304,10 @@ proto_library(
     deps = [
         ":event_filter_proto",
         ":event_template_field_proto",
+        ":metric_frequency_spec_proto",
         ":reporting_impression_qualification_filter_proto",
-        ":windowing_spec_proto",
-        "@com_google_googleapis//google/type:interval_proto",
+        "@com_google_protobuf//:timestamp_proto",
     ],
-)
-
-proto_library(
-    name = "windowing_spec_proto",
-    srcs = ["windowing_spec.proto"],
-    strip_import_prefix = IMPORT_PREFIX,
-    deps = [":metric_frequency_spec_proto"],
 )
 
 SERVICE_LIBS = [
@@ -356,7 +348,9 @@ proto_descriptor_set(
         ":event_filter_proto",
         ":event_template_field_proto",
         ":impression_qualification_filter_spec_proto",
+        ":metric_frequency_spec_proto",
         ":reporting_impression_qualification_filter_proto",
         ":reporting_interval_proto",
+        ":result_group_proto",
     ],
 )
