feat: draft cue files for control plane deployment

--- a/src/main/k8s/BUILD.bazel
+++ b/src/main/k8s/BUILD.bazel
@@ -121,3 +121,13 @@ cue_library(
         ":config",
     ],
 )
+
+cue_library(
+    name = "control_plane",
+    srcs = ["control_plane_v2.cue"],
+    deps = [
+        ":base",
+        ":config",
+        ":spanner",
+    ],
+)
