--- a/src/main/k8s/dev/BUILD.bazel
+++ b/src/main/k8s/dev/BUILD.bazel
@@ -498,3 +498,32 @@ cue_dump(
         "//src/main/k8s:open_telemetry",
     ],
 )
+
+cue_dump(
+    name = "control_plane_gke",
+    srcs = ["control_plane_gke.cue"],
+    cue_tags = {
+        "container_registry": IMAGE_REPOSITORY_SETTINGS.container_registry,
+        "image_repo_prefix": IMAGE_REPOSITORY_SETTINGS.repository_prefix,
+        "image_tag": IMAGE_REPOSITORY_SETTINGS.image_tag,
+        "public_api_address_name": REPORTING_K8S_SETTINGS.public_api_address_name,
+        "google_cloud_project": GCLOUD_SETTINGS.project,
+    },
+    tags = ["manual"],
+    deps = [
+        ":base_gke",
+        ":config_gke",
+        "//src/main/k8s:control_plane",
+    ],
+)
+
+kustomization_dir(
+    name = "control_plane",
+    testonly = True,
+    srcs = [
+        "resource_requirements.yaml",
+        ":control_plane_gke",
+    ],
+    generate_kustomization = True,
+    tags = ["manual"],
+)
